--- a/artifact01.html
+++ b/artifact01.html
@@ -21,7 +21,7 @@
     <h2>EDUCATION HISTORY</h2>
         <strong>May 2006 – Current</strong><br>
         <i>University of Sao Paulo, Sao Paulo BRAZIL</i><br>
-        <a href="http//:www.fe.usp.br">http//:www.fe.usp.br</a><br>
+        <a href="http//:www.fe.usp.br" target="_blank">http//:www.fe.usp.br</a><br>
         Masters in International Marketing<br>
         Expected graduation: Oct 2007<br>
         <br>
@@ -36,7 +36,7 @@
     <h2>WORK EXPERIENCE</h2>
         Jan 2006 – Current<br>
         MOEMA MARKETING, Sao Paulo BRAZIL<br>
-        <a href="http://www.moemamkt.com.br">http://www.moemamkt.com.br</a><br>
+        <a href="http://www.moemamkt.com.br" target="_blank">http://www.moemamkt.com.br</a><br>
         Marketing Trainee – Casual (weekends and holidays)
         <h3>Responsibilities and achievements:</h3>
         <ul>
@@ -51,7 +51,7 @@
 
         Jun 2006 – Sep 2006<br>
         THE ART OF MARKETING, Sao Paulo BRAZIL<br>
-        <a href="http://www.artofmarketing.com">http://www.artofmarketing.com</a><br>
+        <a href="http://www.artofmarketing.com" target="_blank">http://www.artofmarketing.com</a><br>
         Internship – 12 weeks full-time<br>
         <h3>Responsibilities and achievements:</h3>
         <ul>
