style.css changes

--- a/Module03.html
+++ b/Module03.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
     <head>
         <title>Module03</title>
-        <link rel="Stylesheet" href="./style.css" type="text/css">
+        <link rel="Stylesheet" href="style.css" type="text/css">
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/dancing" type="text/css">
     </head>
     <body>
