--- a/artifact02.html
+++ b/artifact02.html
@@ -103,6 +103,18 @@
 </div>
 </div> 
 
+<div class="row"> 
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    <div class="white"></div>
+    <div class="black"></div>
+    </div>
+
 <div class="clear"> </div>
 
     </body>
